Fixed display overflow bug whihc taked more display then alloted

--- a/styles.css
+++ b/styles.css
@@ -22,12 +22,13 @@ body {
 }
 
 .main {
-  padding: 2rem;
+  padding-left: 3rem;
+  padding-top: 2rem;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(15rem, auto));
   gap: 1rem;
   /* overflow-wrap: normal; */
-  width: 100vw;
+  width: 94dvw;
 }
 
 .newCard {
